[package]
name = "eule"
version = "0.5.4"
edition = "2021"
description = "Async generic serialization crate with a minimal interface."
license = "MIT"
repository = "https://github.com/brie-r/eule"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
directories = "5.0.1"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-std", "io-util", "sync"] }
